{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 179,
  "lineage": "158f3e42-b079-5f42-d37f-7ef06e48a1a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0f265faf9d0ad1e",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:elastic-ip/eipalloc-0a0f265faf9d0ad1e",
            "domain": "vpc",
            "id": "eipalloc-0a0f265faf9d0ad1e",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-134-223-128.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.223.128",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-nat-eip"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-028af9a1eb20046ca",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-0ca7defa859c0ad4e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca7defa859c0ad4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-philip-clmas-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bd419ba402a351ef"
              }
            ],
            "primary_network_interface_id": "eni-0bd419ba402a351ef",
            "private_dns": "ip-172-20-0-39.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.0.39",
            "public_dns": "ec2-18-170-78-162.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.78.162",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a78ed5e3b3be02d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0452ccb680a839126",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-app-server",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-app-server",
              "Tier": "app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d603694d2c47016f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-0ca7defa859c0ad4e",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_instance.db",
            "aws_instance.monitor",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_nat_gateway.main",
            "aws_security_group.app",
            "aws_security_group.database",
            "aws_security_group.monitor",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-028af9a1eb20046ca",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-058b71c43373e9649",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058b71c43373e9649",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-philip-clmas-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01c0c07d81e09bad5"
              }
            ],
            "primary_network_interface_id": "eni-01c0c07d81e09bad5",
            "private_dns": "ip-172-20-10-39.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.39",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6e76daf4651b1f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073c5c9c8ab60e6e4",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-db-server",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-db-server",
              "Tier": "db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c524d298c0f5a63f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-058b71c43373e9649",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_instance.monitor",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_nat_gateway.main",
            "aws_security_group.app",
            "aws_security_group.database",
            "aws_security_group.monitor",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-028af9a1eb20046ca",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-00a314f1fd87756a9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a314f1fd87756a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-philip-clmas-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fe1d7c82c8c42af5"
              }
            ],
            "primary_network_interface_id": "eni-0fe1d7c82c8c42af5",
            "private_dns": "ip-172-20-0-80.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.0.80",
            "public_dns": "ec2-18-133-157-101.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.157.101",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08af63d9351d6dd23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0452ccb680a839126",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-monitor-server",
              "Tier": "monitor"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-monitor-server",
              "Tier": "monitor"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073b187ce45631aeb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-00a314f1fd87756a9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_security_group.monitor",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:internet-gateway/igw-0e74c88ee26660611",
            "id": "igw-0e74c88ee26660611",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-igw"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-igw"
            },
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0f265faf9d0ad1e",
            "association_id": "eipassoc-0b183c4609ba12aa8",
            "connectivity_type": "public",
            "id": "nat-06fb4c4f7d1b5fafd",
            "network_interface_id": "eni-0a8541e411b0c2811",
            "private_ip": "172.20.0.35",
            "public_ip": "18.134.223.128",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0452ccb680a839126",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-nat-gw"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:route-table/rtb-0d3dc99676ba62c2c",
            "id": "rtb-0d3dc99676ba62c2c",
            "owner_id": "226290659927",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06fb4c4f7d1b5fafd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-private-rt"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "rtb-0d3dc99676ba62c2c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:route-table/rtb-04d2351da8ad7f641",
            "id": "rtb-04d2351da8ad7f641",
            "owner_id": "226290659927",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e74c88ee26660611",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-public-rt"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "rtb-04d2351da8ad7f641",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06586a83d06e5734f",
            "region": "eu-west-2",
            "route_table_id": "rtb-0d3dc99676ba62c2c",
            "subnet_id": "subnet-073c5c9c8ab60e6e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff1d28da6ccc324f",
            "region": "eu-west-2",
            "route_table_id": "rtb-0d3dc99676ba62c2c",
            "subnet_id": "subnet-0b5c08633a2c0131f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba92674a652d626b",
            "region": "eu-west-2",
            "route_table_id": "rtb-04d2351da8ad7f641",
            "subnet_id": "subnet-0452ccb680a839126"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c8b10b84aab262b",
            "region": "eu-west-2",
            "route_table_id": "rtb-04d2351da8ad7f641",
            "subnet_id": "subnet-06bdfd03128e61c7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-0d603694d2c47016f",
            "description": "Security group for app tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d603694d2c47016f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "102.89.23.243/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "18.133.157.101/32"
                ],
                "description": "Node exporter from monitoring server",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "dev-philip-clmas-app-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-app-sg",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-app-sg",
              "Tier": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-0d603694d2c47016f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_instance.monitor",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_security_group.monitor",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-0c524d298c0f5a63f",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c524d298c0f5a63f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Mongo from app tier",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d603694d2c47016f"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "MySQL exporter from monitoring server",
                "from_port": 9104,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073b187ce45631aeb"
                ],
                "self": false,
                "to_port": 9104
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from app tier",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d603694d2c47016f"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Node exporter from monitoring server",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073b187ce45631aeb"
                ],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from app tier",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d603694d2c47016f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Redis from app tier",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d603694d2c47016f"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d603694d2c47016f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-philip-clmas-db-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-db-sg",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-db-sg",
              "Tier": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-0c524d298c0f5a63f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_instance.monitor",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_security_group.app",
            "aws_security_group.monitor",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-073b187ce45631aeb",
            "description": "Security group for monitor tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073b187ce45631aeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Alert manager from anywhere",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9093
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus from anywhere",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "102.89.23.243/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-philip-clmas-monitor-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-monitor-sg",
              "Tier": "monitor"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-monitor-sg",
              "Tier": "monitor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-073b187ce45631aeb",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-073c5c9c8ab60e6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073c5c9c8ab60e6e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-073c5c9c8ab60e6e4",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-0b5c08633a2c0131f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5c08633a2c0131f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-private-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-0b5c08633a2c0131f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-0452ccb680a839126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0452ccb680a839126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-0452ccb680a839126",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-06bdfd03128e61c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bdfd03128e61c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-public-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c9089af1f5ea918d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-06bdfd03128e61c7a",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:vpc/vpc-0c9089af1f5ea918d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-00b5c817e39e9b63a",
            "default_route_table_id": "rtb-08ef81b6c2c5dee2e",
            "default_security_group_id": "sg-0a98a49c97d2f94c1",
            "dhcp_options_id": "dopt-0c9b6880034d25e1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9089af1f5ea918d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ef81b6c2c5dee2e",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-vpc",
              "Project": "terraform-environment-service"
            },
            "tags_all": {
              "Environment": "dev-philip-clmas",
              "Name": "dev-philip-clmas-vpc",
              "Project": "terraform-environment-service"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "vpc-0c9089af1f5ea918d",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}